--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@emailjs/browser": "^4.4.1",
     "bootstrap": "^5.3.3",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
